# kahoot_like_free

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.prod  README.md  docker-compose.prod.yml  docker-compose.yml
.claude/: settings.local.json
migrations/: 20260414000000_initial_schema.sql  20260414000001_add_users.sql  20260414000002_add_quiz_media.sql  20260414000003_add_question_image.sql
src/: auth.rs  game.rs  lib.rs  main.rs  models.rs  pow.rs
src/handlers/: admin.rs  auth.rs  game.rs  mod.rs  quiz.rs  upload.rs
static/: host.html  index.html  player.html
