[package]
name = "kahoot_free"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
futures = "0.3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"] }
qrcode = "0.14"
tracing = "0.1"
tracing-subscriber = "0.3"
argon2 = "0.5"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"
jsonwebtoken = "9"
